--- a/index.html
+++ b/index.html
@@ -110,26 +110,34 @@
                     <li class="team-item">
                         <img src="./images/studio/person1.jpg" alt="Перший представник команди чоловічої статі"
                             width="270" height="260">
+                       <div class="team-div">
                         <h3 class="team-subtitle">Ігор Дем'яненко</h3>
                         <p class="team-description" lang="en">Product Designer</p>
+                       </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/studio/person2.jpg" alt="Другий представник команди жіночої статі"
                             width="270" height="260">
-                        <h3 class="team-subtitle">Ольга Рєпіна</h3>
-                        <p class="team-description" lang="en">Frontend Developer</p>
+                        <div class="team-div">
+                            <h3 class="team-subtitle">Ольга Рєпіна</h3>
+                            <p class="team-description" lang="en">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/studio/person3.jpg" alt="Третій представник команди чоловічої статі"
                             width="270" height="260">
-                        <h3 class="team-subtitle">Микола Тарасов</h3>
-                        <p class="team-description" lang="en">Marketing</p>
+                        <div class="team-div">
+                            <h3 class="team-subtitle">Микола Тарасов</h3>
+                            <p class="team-description" lang="en">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/studio/person4.jpg" alt="Четвертий представник команди чоловічої статі"
                             width="270" height="260">
-                        <h3 class="team-subtitle">Михайло Єрмаков</h3>
-                        <p class="team-description" lang="en">UI Designer</p>
+                        <div class="team-div">
+                            <h3 class="team-subtitle">Михайло Єрмаков</h3>
+                            <p class="team-description" lang="en">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
